--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,15 +1,23 @@
-body, html {
+/*  body, html {
   height: 100%;
   margin: 0;
 }
 
+*/
+
+body {
+  margin: 20px;
+}
+
+/*
 h1 {
   text-align: center;
 }
+*/
 
 .bgimg-1 {
   position: relative;
-  opacity: 0.65;
+/*  opacity: 0.65; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -18,12 +26,41 @@ h1 {
   height: 100%;
 }
 
-#searchPrompt, #inputCity {
+/*
+#searchPrompt, 
+
   height: 30px;
   font-size: 25px;
+*/
+
+#cityList {
+  margin-top: 10px;
+}
+
+#inputCity {
+  width: 100%;
+  border-radius: 4px;
+}
+
+/*
+#inputCityPrompt {
+  padding-left: 40px;
 }
 
 .list-group {
   list-style-type: none;
   width: 25%;
 }
+
+
+/* .list-group-item {  
+  height: 35px;     
+ }                   
+
+.list-option {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+}
+*/
